# ArkTrackOvernight

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: launch.json
backend/: pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/api/: alerts.py  cameras.py  control.py  factories.py  recordings.py  reports.py  rules.py  sites.py  ws.py  zones.py
backend/app/inference/: dfine_client.py
backend/app/offline/: __init__.py  __main__.py  aggregate.py  batch.py  day_summary.py  ingest.py  report_pdf.py  reports.py  runner.py  watcher.py
backend/app/pipeline/: __init__.py  activity.py  dfine_detector.py  geom.py  group_detector.py  hog_detector.py  id_recovery.py  pipeline.py  pipeline_config.py  pipeline_detection.py  pipeline_render.py  pipeline_tuning.py  pipeline_vlm.py  pipeline_zones.py  renderer.py  runtime.py  sahi.py  siglip_classifier.py  tracklet.py  vlm_classifier.py  yolo_client.py  zone_detector.py
backend/app/realtime/: broadcaster.py  live_streams.py
backend/app/storage/: media.py
backend/app/workers/: camera_worker.py  clip_extractor.py  frame_sampler.py  metrics.py  registry.py  resting_clips.py  rule_engine.py  zone_filter.py
backend/tools/: bench_dfine.py  bench_overnight.py  check_headless_parity.py  export_dfine_onnx.py  export_siglip_onnx.py  profile_frame.py  verify_batch.py  verify_day_report.py  verify_ingest_parse.py  verify_offline_runner.py  verify_period_report.py  warmup_trt.py
frontend/: STYLE.md  index.html  package-lock.json  (+4 more)
(+105 files in other folders)
