[project]
name = "arktrack-backend"
version = "0.1.0"
description = "ArkTrack Monitoring Platform backend (Phase 1)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-multipart>=0.0.7",
    "httpx>=0.26",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "shapely>=2.0",
    "supervision>=0.22",
    "scipy>=1.13",
    "requests>=2.32",
    "tzdata>=2024.1",
    "fpdf2>=2.8",
    "matplotlib>=3.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
